--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -21,10 +21,14 @@ main:
   - name: Talks
     url: '#talks'
     weight: 50
-  
+
+  - name: People
+    url: '#people'
+    weight: 60
+
   - name: Contact
     url: '#contact'
-    weight: 60
+    weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
