--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Niu Yong's Academic Homepage # Website name
-baseURL: 'https://example.com' # Website URL
+baseURL: 'https://niuyong1905.org' # Website URL
 
 ############################
 ## LANGUAGE
